# citation-kit

./: .gitignore  BACKENDS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
citation_kit/: __init__.py  canonicalize.py  history.py  observability.py  registry.py  renderer.py  types.py  validator.py
citation_kit/adapters/: __init__.py  arxiv.py  base.py  brave.py  crossref.py  europepmc.py  exa.py  openalex.py  pubmed.py  semantic_scholar.py  serper.py  tavily.py
citation_kit/integrations/: __init__.py  conversation_jsonb.py  langgraph.py  sqlalchemy.py
citation_kit/stores/: __init__.py  json_file.py  memory.py  postgres.py  redis.py  sqlite.py
citation_kit/tests/: test_adapters.py  test_canonicalize.py  test_history.py  test_registry.py  test_renderer.py  test_stores.py  test_validator.py
